--- a/Android/Vuive/app/src/main/AndroidManifest.xml
+++ b/Android/Vuive/app/src/main/AndroidManifest.xml
@@ -13,6 +13,21 @@
         android:theme="@style/Theme.Vuive"
         tools:targetApi="31">
         <activity
+            android:name=".activity.ArticlesActivity"
+            android:windowSoftInputMode="adjustPan"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".activity.DetailArticlesActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".activity.ForgotPasswordActivity"
             android:exported="false">
             <meta-data
