--- a/Android/Vuive/app/build.gradle
+++ b/Android/Vuive/app/build.gradle
@@ -1,3 +1,4 @@
+//noinspection GradleCompatible
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
@@ -42,7 +43,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
@@ -51,6 +51,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx:24.5.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    implementation files('libs/mysql-connector-java-8.0.30.jar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -69,6 +70,6 @@ dependencies {
 
     //Jetpack Navigation Component
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+
+
 }
