--- a/Android/Vuive/app/build.gradle
+++ b/Android/Vuive/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
+    id 'kotlin-android-extensions'
+
 }
 
 android {
@@ -10,7 +12,7 @@ android {
 
     defaultConfig {
         applicationId "com.nqt.vuive"
-        minSdk 29
+        minSdk 25
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -63,6 +65,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //lib glide
     implementation 'com.github.bumptech.glide:glide:4.14.2'
+    implementation 'jp.wasabeef:glide-transformations:4.3.0'
 
     // Picasso load image into ImageView
     implementation 'com.squareup.picasso:picasso:2.71828'
@@ -71,4 +74,12 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    //user permission
+    implementation 'com.karumi:dexter:6.2.2'
+
+    //coil
+    implementation("io.coil-kt:coil:1.1.1")
 }
