--- a/Android/Vuive/app/build.gradle
+++ b/Android/Vuive/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
     id 'kotlin-android-extensions'
+
 }
 
 android {
@@ -11,7 +12,7 @@ android {
 
     defaultConfig {
         applicationId "com.nqt.vuive"
-        minSdk 29
+        minSdk 25
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -64,6 +65,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //lib glide
     implementation 'com.github.bumptech.glide:glide:4.14.2'
+    implementation 'jp.wasabeef:glide-transformations:4.3.0'
 
     // Picasso load image into ImageView
     implementation 'com.squareup.picasso:picasso:2.71828'
@@ -80,5 +82,4 @@ dependencies {
 
     //coil
     implementation("io.coil-kt:coil:1.1.1")
-
 }
