--- a/Android/Vuive/settings.gradle
+++ b/Android/Vuive/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Vuive"
+rootProject.name = "App_LTUD"
 include ':app'
